# multiagent-chat

./: .agent-report-session-tmp.md  .editorconfig  .gitignore  7_important_equations.md  AGENTS.md  AGENT_BRIEFING.md  CLAUDE.md  COPILOT.md  GEMINI.md  HANDOFF.md  MULTIAGENT_DEV_TESTING.md  OVERVIEW.md  QWEN.md  README.en.md  README.ja.md  README.md  README_jp.md  RULE.md  analyze.py  index.html  multiagent_export_session_html.py  record_changes.py  update_hub_core.py
apps/: README.md
assets/: README.md
auto_mode/: api.py  auto-mode  monitor  monitor.py  pane.py
backend_core/: index_viewer.py
debug/: __init__.py
docs/: AGENT.ja.md  AGENT.md  agent-records-structure.md  chat-commands.en.md  chat-commands.md  cloudflare-access.md  design-philosophy.en.md  design-philosophy.md  developer-guide.en.md  developer-guide.md  event-log-sync.en.md  event-log-sync.md  full-readme-ja.md  full-readme.md  gemini-direct-api.en.md  gemini-direct-api.md  http-api.en.md  http-api.md  multiferroics-trends-beginner-2026-04-02.md  pane-viewer-gemini-handoff.md  refactor-top-level.md  site-readme-ja.md  site-readme.md  technical-details.en.md  technical-details.md  trouble-report-20260501-kernel-panic-recovery.md
frontedge/: __init__.py  session_state.py
hub_backend/: actions.py  branding.py  chat_supervisor.py  color_constants.py  coordinated_restart.py  hub_server.py  post_routes.py  runtime.py  server_helpers.py  session_api.py  session_query.py
lib/: agent_registry_shell.py
message_delivery/: __init__.py  agent-send  cli.py  interaction.py  paste_timing.py  send.py
multiagent-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
multiagent-app/src-tauri/capabilities/: default.json
multiagent-app/src-tauri/src/: inject.js  main.rs
native_log_sync/: __init__.py  api.py  chat_periodic_loop.py  chat_runtime_init.py  chat_server_hooks.py  dispatch.py  duplicate.py  entry_kind.py  event_format.py  redacted.py  registry.py  sync_timing.py  syncer.py
ops/: README.md
pane_trace/: __init__.py
providers/: README.md  __init__.py  claude.py  codex.py  copilot.py  cursor.py  opencode.py  qwen_gemini.py  sync.py
reports/: agent_index_deep_dive_review.md  agent_index_reevaluation_2026_04_04.md  agent_index_split_final_approval.md  agent_index_split_final_confirmation.md  agent_index_split_review_pass2.md  comprehensive_evaluation_2026_04_04.md  (+11 more)
(+650 files in other folders)
