[package]
name = "multiagent-chat"
version = "1.0.9"
edition = "2021"
description = "Multiagent Chat desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7.1"
